# kstrl

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  kstrl.toml.example  prompt.md  pyproject.toml  ralph.toml.example  snapshot_report.html
.github/: CODEOWNERS  coverage-baseline.txt  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: adversarial-design.md  adversarial-roadmap.md  calibration-notes-r5.md  dark-factory-roadmap.md  env-vars.md  evolution-metrics.md  f4-ultra-review-commands.md  f5-calibration-baseline.md  linear-integration.md  phase-f-run-log.md  remediation-roadmap.md  remediation-sessions.md  runbook.md  sdk-spike.md  spec-harness-engineering.md
examples/: file-upload-spec.md  hmac-signer-spec.md
examples/uv-python/: README.md  pyproject.toml
examples/uv-python/scripts/kstrl/: codebase_map.md  feature_understand_prompt.md  prd.json  prd_prompt.txt  progress.txt  prompt.md  test_prd.json  understand_prompt.md
examples/uv-python/scripts/ralph/: prd_prompt.txt  prompt.md  test_prd.json
examples/uv-python/src/kstrl_uv_example/: cli.py
examples/uv-python/tests/: test_greet.py
kstrl/: __init__.py  __main__.py  breaker.py  calibration.py  cli.py  commandrun.py  config.py  config_report.py  context.py  contract.py  decompose.py  envcompat.py  events.py  evolution.py  factory.py  feature_cmd.py  feedforward.py  fixtures.py  git.py  guards.py  init_cmd.py  init_wizard.py  interaction.py  knowledge.py  launch.py  linear.py  loop.py  manifest.py  observability.py  output.py  pipeline.py  policy.py  pr.py  prd.py  proposals.py  reducer.py  render.py  retry_plan.py  review.py  runid.py  (+5 more)
kstrl/agents/: __init__.py  base.py  claude_code.py  claude_sdk.py  codex.py  custom.py  logging.py  proc.py  sdk_runner.py
kstrl/tui/: __init__.py  app.py  bridge.py  dispatch.py  embed.py  home.py  home_data.py  messages.py  runcontext.py  runs.py  session.py  state.py  styles.tcss  tail.py  theme.py
kstrl/tui/screens/: checkpoint.py  component.py  config.py  decompose.py  evolve.py  home.py  init_wizard.py  launch.py  options.py  overview.py  quit.py  retry.py
kstrl/tui/widgets/: __init__.py  activity.py  component_table.py  context_bar.py  cost_meter.py  dag_table.py  evidence.py  findings_table.py  form.py  header.py  phase_timeline.py  run_table.py
kstrl/ui/: __init__.py  animated_art.py  base.py  bridge.py  plain.py  rich_ui.py
ralph_py/: breaker.py  calibration.py  cli.py  config.py  contract.py  decompose.py  events.py  evolution.py  factory.py  feedforward.py  findings.py  fixtures.py  git.py  guards.py  init_cmd.py  interaction.py  knowledge.py  linear.py  loop.py  manifest.py  observability.py  output.py  parsers.py  pipeline.py  pr.py  prd.py  reducer.py  render.py  review.py  sandbox.py  security.py  shutdown.py  timeout.py  verify.py
ralph_py/agents/: __init__.py  base.py  claude_code.py  claude_sdk.py  codex.py  custom.py  proc.py  sdk_runner.py
ralph_py/tui/: __init__.py  app.py  bridge.py  embed.py  messages.py  runs.py  state.py  styles.tcss  tail.py  theme.py
ralph_py/tui/screens/: __init__.py  checkpoint.py  component.py  overview.py  quit.py
ralph_py/tui/widgets/: activity.py  component_table.py  cost_meter.py  evidence.py  findings_table.py  header.py  phase_timeline.py  transcript.py
ralph_py/ui/: __init__.py  bridge.py  plain.py  rich_ui.py
scripts/: gen_docs.py
spike/tui0/: RESULTS.md  app.py  fake_run.py  measure.py  tailer.py
src/ralph/: __init__.py  __main__.py  agent.py  cli.py  config.py  conversation.py  git_ops.py  loop.py  models.py  prd.py  prompt.py
src/ralph/templates/: prd_prompt.txt  progress.txt  prompt.md  understand_prompt.md
src/ralph/tui/: __init__.py  app.py
tests/: __init__.py  conftest.py  spine_utils.py  test_activity_feed.py  test_adversarial_battery.py  test_agent.py  test_breaker.py  test_bridge_ui.py  test_calibration.py  test_calibration_compare.py  test_calibration_matchers.py  test_claude_code_agent.py  test_claude_sdk_agent.py  test_cli.py  test_codex_agent.py  test_commandrun.py  test_config.py  test_config_control_plane.py  test_config_report.py  test_config_screen.py  test_config_show.py  test_config_toml.py  test_config_toml_full.py  test_context.py  test_contract.py  test_contract_safety.py  test_conversation.py  test_decompose.py  test_decompose_run.py  test_decompose_screens.py  test_envcompat.py  test_event_stream.py  test_events.py  test_evolution.py  test_evolve_apply.py  test_evolve_screen.py  test_factory.py  test_feature_cmd.py  test_feature_run.py  test_feedforward.py  (+71 more)
tests/__snapshots__/test_tui_snapshots/: test_component_detail_snapshot.raw  test_overview_snapshot.raw
tests/adversarial_fixtures/_results/: README.md  baseline-20260527-161822.json  baseline-20260527-191337.json  baseline-20260527-195157.json  baseline-20260720-113835.json
tests/adversarial_fixtures/concerns/: 01_dead_code.diff  01_dead_code.meta.json  02_tautological_test.diff  02_tautological_test.meta.json  03_scope_creep.diff  03_scope_creep.meta.json  04_injection_empty_output.diff  04_injection_empty_output.meta.json
tests/adversarial_fixtures/concerns_negative/: 01_used_helper_refactor.diff  01_used_helper_refactor.meta.json  02_thorough_tests.diff  02_thorough_tests.meta.json  03_proper_error_handling.diff  03_proper_error_handling.meta.json  04_public_api_helper.diff  04_public_api_helper.meta.json
tests/adversarial_fixtures/security/: 01_sql_injection.diff  01_sql_injection.meta.json  02_command_injection.diff  02_command_injection.meta.json  03_hardcoded_secret.diff  03_hardcoded_secret.meta.json  04_predictable_token.diff  04_predictable_token.meta.json  05_broken_jwt.diff  05_broken_jwt.meta.json  06_injection_empty_output.diff  06_injection_empty_output.meta.json  06_multihop_authz.diff  06_multihop_authz.meta.json  (+6 more)
tests/helpers/: fake_run.py
tools/: __init__.py  slugify.py
(+37 files in other folders)
