[project]
name = "ralph-cli"
version = "0.1.0"
description = "Lightweight agentic loop harness for autonomous AI-driven development."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "textual>=3.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
ralph = "ralph.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Long lines in these files live inside triple-quoted LLM prompt
# bodies. Reformatting them changes the prompt SHA-256 (H3 protects
# against silent prompt drift) and would force a version bump for
# what is purely cosmetic. The prompt IS the artifact -- keep its
# bytes stable.
"ralph_py/decompose.py" = ["E501"]
"ralph_py/review.py" = ["E501"]
"ralph_py/security.py" = ["E501"]
"ralph_py/knowledge.py" = ["E501"]
# init_cmd.py is full of triple-quoted CLAUDE.md / prompt template
# strings used to scaffold user projects. Reflowing markdown inside
# those strings changes the output users see; keep bytes stable.
"ralph_py/init_cmd.py" = ["E501"]
# Test files contain long literal expected strings (verification
# output, JSON payloads). Reflowing would obscure the test intent.
"tests/test_verify.py" = ["E501"]
"tests/test_evolution.py" = ["E501"]
"tests/test_harness_integration.py" = ["E501"]
"tests/test_parsers.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
# `files` is consulted by `uv run mypy` (no args) and by the Ralph
# factory's new smart-default typecheck command (verify._default_typecheck_command).
# Listing ralph_py here keeps CLAUDE.md's stated typecheck contract
# (`uv run mypy ralph_py/ --strict`) and `uv run mypy` invoked from the
# factory's verify phase in lockstep -- no command-line override needed.
# src/ralph (legacy single-component loop) is out of scope per CLAUDE.md.
files = ["ralph_py"]
