[project]
name = "kstrl"
version = "0.2.0"
description = "Lightweight agentic loop harness for autonomous AI-driven development."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    # TUI rewrite PR D: the dashboard engine. Pinned <6 (Textualize
    # wind-down risk); 5.3.0 verified compatible with locked rich 14.3.3
    # in the Stage 0 spike (spike/tui0/RESULTS.md).
    "textual>=3.0,<6",
]

# R7.6: the claude-sdk agent adapter is opt-in because the SDK carries a
# heavy transitive set (anyio, mcp, starlette, uvicorn, ...) while the
# core harness runs on rich+click. agent_type = "claude-sdk" without the
# extra fails loudly with the install hint.
[project.optional-dependencies]
sdk = [
    "claude-agent-sdk>=0.2.123,<0.3",
]

[project.urls]
Homepage = "https://github.com/0xfauzi/kstrl"
Repository = "https://github.com/0xfauzi/kstrl"
Documentation = "https://github.com/0xfauzi/kstrl#readme"
Architecture = "https://github.com/0xfauzi/kstrl/blob/main/ARCHITECTURE.md"

[project.scripts]
ks = "kstrl.cli:main"
kstrl = "kstrl.cli:main"
ralph = "kstrl.cli:deprecated_ralph_main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    # The sdk extra is part of the dev set so the R7.6 unit tests and
    # mypy always exercise the adapter+runner.
    "claude-agent-sdk>=0.2.123,<0.3",
    "pytest-textual-snapshot>=1.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kstrl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "spine: real-git spine tier (R4.2) - unmocked worktree/PR/lock paths; deselect with -m 'not spine' to keep the fast tier fast",
]

# R4.4 coverage measurement. relative_files lets CI combine data files
# recorded in different checkouts (fast tier + spine tier jobs) and lets
# the report resolve paths from the repo root. The ratchet baseline CI
# enforces lives in .github/coverage-baseline.txt - a MEASURED number,
# updated only upward (or deliberately, with justification in the PR).
[tool.coverage.run]
source = ["kstrl"]
relative_files = true

[tool.coverage.report]
precision = 2

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Long lines in these files live inside triple-quoted LLM prompt
# bodies. Reformatting them changes the prompt SHA-256 (H3 protects
# against silent prompt drift) and would force a version bump for
# what is purely cosmetic. The prompt IS the artifact -- keep its
# bytes stable.
"kstrl/decompose.py" = ["E501"]
"kstrl/review.py" = ["E501"]
"kstrl/security.py" = ["E501"]
"kstrl/knowledge.py" = ["E501"]
# init_cmd.py is full of triple-quoted CLAUDE.md / prompt template
# strings used to scaffold user projects. Reflowing markdown inside
# those strings changes the output users see; keep bytes stable.
"kstrl/init_cmd.py" = ["E501"]
# Test files contain long literal expected strings (verification
# output, JSON payloads). Reflowing would obscure the test intent.
"tests/test_verify.py" = ["E501"]
"tests/test_evolution.py" = ["E501"]
"tests/test_harness_integration.py" = ["E501"]
"tests/test_parsers.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
# `files` is consulted by `uv run mypy` (no args) and by the Ralph
# factory's new smart-default typecheck command (verify._default_typecheck_command).
# Listing kstrl here keeps CLAUDE.md's stated typecheck contract
# (`uv run mypy kstrl/ --strict`) and `uv run mypy` invoked from the
# factory's verify phase in lockstep -- no command-line override needed.
# Legacy src/ralph (single-component loop + Textual TUI) was deleted in
# the legacy-purge cleanup; kstrl is now the only Python package.
files = ["kstrl"]
