[project]
name = "kstrl-uv-example"
version = "0.1.0"
description = "Example uv-managed Python project that includes the kstrl harness."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kstrl",
]

[project.scripts]
kstrl-uv-example = "kstrl_uv_example.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kstrl_uv_example"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.uv.sources]
kstrl = { path = "../../", editable = true }
